--- a/src/main/resources/templates/plan/getMonthlyPlan.html
+++ b/src/main/resources/templates/plan/getMonthlyPlan.html
@@ -4,6 +4,7 @@
     <title>월별 일정</title>
 </head>
 <body>
+<script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/getMonthlyPlan.js"></script>
 <div class="planDiv">
     <div class="plans">
