--- a/src/main/resources/templates/plan/modifyPlan.html
+++ b/src/main/resources/templates/plan/modifyPlan.html
@@ -4,6 +4,7 @@
   <title>일정 수정</title>
 </head>
 <body>
+<script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/addPlan.js"></script>
 <script src="/js/tui-date-picker.js"></script>
 <script src="/css/tui-date-picker.css"></script>
