--- a/src/main/resources/templates/user/signUp.html
+++ b/src/main/resources/templates/user/signUp.html
@@ -4,6 +4,7 @@
     <title>SignUp</title>
 </head>
 <body>
+<script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/signUp.js"></script>
 <script src="/js/util.js"></script>
 <div class ="signUp">
