--- a/src/main/resources/templates/plan/getDailyPlan.html
+++ b/src/main/resources/templates/plan/getDailyPlan.html
@@ -4,6 +4,7 @@
   <title>일별 일정</title>
 </head>
 <body>
+<script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/getDailyPlan.js"></script>
 <input type="hidden" id="year"/>
 <input type="hidden" id="month"/>
