--- a/src/main/resources/templates/plan/getPlan.html
+++ b/src/main/resources/templates/plan/getPlan.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/getPlan.js"></script>
     <h1>일정</h1>
     <table>
